# simulations-youtube

./: README.md
housing-rent-simulation/: README.md  pyproject.toml
housing-rent-simulation/housing_rent_simulation/: __init__.py  constants.py  main.py
housing-rent-simulation/housing_rent_simulation/models/: __init__.py  property.py  renter.py
housing-rent-simulation/housing_rent_simulation/simulation/: __init__.py  base.py  scenarios.py
housing-rent-simulation/tests/: __init__.py  test_models.py  test_simulation.py
