[tool.poetry]
name = "housing-rent-simulation"
version = "0.1.0"
description = "A simulation of housing rental markets with different information scenarios"
readme = "README.md"
authors = ["Matthias Ruiz <hamachermatthias12@gmail.com>"]
packages = [{ include = "housing_rent_simulation" }]

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
mypy = "^1.15.0"
pytest = "^8.3.5"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
